Fixed findings for modules patch-analyzer and rest-lib-utils